--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@types/sqlite3": "^3.1.11",
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^17.2.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.4",
     "next": "14.2.30",
@@ -21,7 +24,10 @@
     "react-calendar": "^5.1.0",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
-    "sharp": "^0.33.5"
+    "react-hook-form": "^7.54.2",
+    "sharp": "^0.33.5",
+    "sqlite3": "^5.1.7",
+    "yup": "^1.5.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -34,6 +40,7 @@
     "eslint-config-next": "14.2.5",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
 }
